# Vulkan_3DGS

./: .gitignore  CMakeLists.txt  QnA.md  README.md  proj_structure.md
cowork/: crew_demo.py
src/: main.cpp
src/common/: GaussianTypes.hpp
src/engine/: VkBuffer.hpp  VkCompute.hpp  VkEngine.hpp
src/shaders/: backward.comp  compile.bat  gaussian.comp  loss.comp  simple.comp
src/utils/: ImageIO.hpp
